[tool.poetry]
name = "hephai"
version = "0.1.0"
description = ""
authors = ["Bertram Holzer <bertram@bho-software.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.95.0"
jinja2 = "^3.1.2"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
